--- a/src/options.html
+++ b/src/options.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="options.css"></link>
   </head>
   <body>
-    <script type="text/javascript" src="https://cdnjs.buymeacoffee.com/1.0.0/button.prod.min.js" data-name="bmc-button" data-slug="mikeyaworski" data-color="#79D6B5" data-emoji="" data-font="Cookie" data-text="Buy me a coffee" data-outline-color="#000" data-font-color="#fff" data-coffee-color="#fd0"></script>
+    <script type="text/javascript" src="https://cdnjs.buymeacoffee.com/1.0.0/button.prod.min.js" data-name="bmc-button" data-slug="h4x0rm1k3" data-color="#79D6B5" data-emoji="" data-font="Cookie" data-text="Buy me a coffee" data-outline-color="#000" data-font-color="#fff" data-coffee-color="#fd0"></script>
     <div class="btc-code" title="Bitcoin Address">3Cc3CmCbyzMu8g8zZSxAdRJydAyURGrWH7</div>
     <hr>
 
